--- a/src/screens/basket/Basket.css
+++ b/src/screens/basket/Basket.css
@@ -16,6 +16,7 @@
     font-family: "Lato";
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .basket__list__card__delete{
@@ -23,6 +24,11 @@
     height: 15px;
     background-image: url(../../assets/img/cross.png);
     background-repeat: no-repeat;
+    background-size: 15px;
+}
+
+.basket__list__card__delete:hover{
+    cursor: pointer;
 }
 
 .basket__list__card__img{
