--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,10 +6,11 @@
 }
   
   .header__top__content__logo{
-    width: 166px;
-    height: 40px;
-    background-image: url(../../assets/img/SHOPPER.png);
+    width: 300px;
+    height: 80px;
+    background-image: url(../../assets/img/logo.png);
     background-repeat: no-repeat;
+    background-size: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
