Revert "Merge pull request #5 from Alex-der13/eject_project"
This reverts commit 67f0e198bc265393de4c696980f5d4689f9520df, reversing
changes made to c573df86c208772dcb8a64463f61d975c84f171a.

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,11 +6,10 @@
 }
   
   .header__top__content__logo{
-    width: 300px;
-    height: 80px;
-    background-image: url(../../assets/img/logo.png);
+    width: 166px;
+    height: 40px;
+    background-image: url(../../assets/img/SHOPPER.png);
     background-repeat: no-repeat;
-    background-size: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
