--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -16,6 +16,8 @@
 .header__bottom {
     margin: 0 auto;
     width: 100%;
+    padding-bottom: 5px;
+    border-bottom: 2px solid lightgrey;
     display: flex;
     justify-content: space-between;
     a {
