--- a/src/components/cardShort/CardShort.module.scss
+++ b/src/components/cardShort/CardShort.module.scss
@@ -1,6 +1,6 @@
 .Card {
   margin: 50px 10px 10px;
-  width: 160px;
+  max-width: 140px;
   height: 360px;
   display: flex;
   flex-direction: column;
